<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    >
 <LinearLayout
     android:id="@+id/homePageSearch"
     android:layout_width="match_parent"
     android:layout_height="69dp"
     android:background="#EC9C4C">

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:elevation="10dp"
         android:gravity="center"
         android:background="@drawable/raduis">

         <ImageView
             android:layout_width="30dp"
             android:layout_height="50dp"
             android:layout_marginLeft="20dp"
             android:src="@drawable/search"/>

         <EditText
             android:id="@+id/searchBar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Discover a city"
             android:textSize="20dp"
             android:layerType="software"
             android:inputType="text"
             android:maxLines="1"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:backgroundTint="#fff"/>

     </LinearLayout>
 </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/explore"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:fontFamily="sans-serif"
            android:textSize="24sp"
            android:textColor="#000000"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/travel"/>

        <com.travelchatapp.pfe.HorizontalListView
            android:id="@+id/homePageCityListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/homePagePopular"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/popular"
                android:textColor="#000000"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif-black"
                android:textSize="24sp"/>


        </LinearLayout>

        <com.travelchatapp.pfe.HorizontalListView
            android:id="@+id/homePagePlaceListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/homePagePopular2"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="Spotlight on"
                android:textColor="#000000"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif-black"
                android:textSize="24sp"/>

        </LinearLayout>

        <com.travelchatapp.pfe.HorizontalListView
            android:id="@+id/homePagePlaceListView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/homePagePopular3"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="Start Exploring"
                android:textColor="#000000"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif-black"
                android:textSize="24sp"/>


        </LinearLayout>

        <com.travelchatapp.pfe.HorizontalListView
            android:id="@+id/homePagePlaceListView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    </ScrollView>
</LinearLayout>